--- a/style.css
+++ b/style.css
@@ -14,13 +14,27 @@ body{
     font-family: 'Aboreto', cursive;
     font-size: 1.25em;
 }
+
+button{
+    font-size: 5em;
+    background-color: #1A498F;
+    color: white;
+    border: 5px solid white;
+    border-radius: 20px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    margin: 3.5em auto;
+    padding: .5em;
+}
+
 h1{
     font-size: 4em;
     font-weight: 400;
 }
 h3{
     font-size: 1.75em;
-    padding: 0 1.25em 1.5em;
+    padding: 0 1.2em 1em;
     font-weight: 900;
 }
 .container{
@@ -28,10 +42,11 @@ h3{
     max-width: 1200px;
     margin: 0 auto;
     text-align: center;
+    display: none;
 }
 .game-name{
-    font-family: 'DynaPuff', cursive;
-    background-color: beige;
+    font-family: 'DynaPuff';
+    background-color:beige;
     padding:1em 1.2em .8em;
 }
 .players{
@@ -41,22 +56,26 @@ h3{
 }
 .rules{
     font-family: 'DynaPuff';
-    color: #1A498F;
+    font-size: 3em;
+    color:white;
     font-weight: 500;
     padding: 1em 2.5em 0;
     word-spacing: 2mm;
-    line-height: .4in;
+    line-height: 2in;
+    text-align: center;
+    display: none;
 }
 .instruction{
     font-family: 'Inknut Antiqua', serif;
     font-size: 1.5em;
-    color: saddlebrown;
+    color:#1A498F;
 }
 .game-ground{
     display: flex;
     justify-content: space-around;
     align-items: center;
     align-content: center;
+    padding: 2em;
 }
 .game-ground > div{
     flex: auto;
@@ -67,17 +86,18 @@ h3{
     justify-content: center;
     align-content: center;
     margin: auto;
-    width: 45%;
+    width: 80%;
     gap: 1em;
     padding: 1em 2em;
+    background-color: #1A498F;
 }
 img{
-    width: 60%;
+    width: 35%;
     flex-grow: 1;
-    flex-shrink: 2;
+    flex-shrink: 1;
     flex-basis: auto;
     border: 1px solid saddlebrown;
-
+    cursor: pointer;
 }
 .points{
     font-family: 'Courier New', Courier, monospace;
@@ -87,5 +107,5 @@ img{
 }
 footer{
     background-color: beige;
-    padding: 1.5em;
+    padding: 2em;
 }
